--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -84,15 +84,15 @@
   transition: transform 0.5s ease;
 }
 .drop-items-hidden {
-  max-height: 0; /* Hide the element by collapsing its height */
-  opacity: 0; /* Make the element invisible */
-  overflow: hidden; /* Prevent content overflow */
+  max-height: 0; 
+  opacity: 0;
+  overflow: hidden; 
   transition: max-height 0.5s ease, opacity 0.3s ease;
 }
 
 .drop-items-display {
-  max-height: 500px; /* Adjust based on content height */
-  opacity: 1; /* Make the element visible */
+  max-height: 500px; 
+  opacity: 1;
   transition: max-height 0.5s ease, opacity 0.3s ease;
 }
 
