--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,7 +89,30 @@
   overflow: hidden; 
   transition: max-height 0.5s ease, opacity 0.3s ease;
 }
+.organisation {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  position: relative;
+  font-size: 20px;
+  font-weight: 700;
+  border: 4px solid;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.organisation:hover {
+  border: 4px solid #9CA3AF;
+  color: #7C3AED;
+}
+
+
+.organisation:hover i {
+  display: block;
+}
 .drop-items-display {
   max-height: 500px; 
   opacity: 1;
