--- a/backend/journals/utils/templates/invoices.html
+++ b/backend/journals/utils/templates/invoices.html
@@ -64,23 +64,27 @@
         <table>
             <thead>
                 <tr>
-                    <th>No #</th>
-                    <th>Account Name</th>
-                    <th>Group</th>
-                    <th>Category</th>
-                    <th>Sub Category</th>
-                    <th>Balance ({{ organisation.currency }})</th>
+                    <th>Bill #</th>
+                    <th>Due Date</th>
+                    <th>Type</th>
+                    <th>Customer</th>
+                    <th>Status</th>
+                    <th>Amount Paid ({{ organisation.currency }})</th>
+                    <th>Amount Due ({{ organisation.currency }})</th>
+                    <th>Due Days </th>
                 </tr>
             </thead>
             <tbody>
-                {% for account in data %}
+                {% for invoice in data %}
                 <tr>
-                    <td>{{ loop.index }}</td>
-                    <td>{{ account.get('name') }}</td>
-                    <td>{{ account.get('group') }}</td>
-                    <td>{{ account.get('category') }}</td>
-                    <td>{{ account.get('sub_category') }}</td>
-                    <td>{{ account.get('account_balance') }}</td>
+                    <td>{{ invoice.get('serial_number') }}</td>
+                    <td>{{ invoice.get('due_date') }}</td>
+                    <td>{{ invoice.get('invoice_data').get('type').title() }}</td>
+                    <td>{{ invoice.get('customer_name') }}</td>
+                    <td>{{ invoice.get('status').title().replace('_', ' ') }}</td>
+                    <td>{{ invoice.get('amount_paid') }}</td>
+                    <td>{{ invoice.get('amount_due') }}</td>
+                    <td>{{ invoice.get('invoice_data').get('due_days')}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
