--- a/backend/journals/utils/templates/services.html
+++ b/backend/journals/utils/templates/services.html
@@ -65,22 +65,18 @@
             <thead>
                 <tr>
                     <th>No #</th>
-                    <th>Account Name</th>
-                    <th>Group</th>
-                    <th>Category</th>
-                    <th>Sub Category</th>
-                    <th>Balance ({{ organisation.currency }})</th>
+                    <th>Service Name</th>
+                    <th>Description</th>
+                    
                 </tr>
             </thead>
             <tbody>
-                {% for account in data %}
+                {% for service in data %}
                 <tr>
                     <td>{{ loop.index }}</td>
-                    <td>{{ account.get('name') }}</td>
-                    <td>{{ account.get('group') }}</td>
-                    <td>{{ account.get('category') }}</td>
-                    <td>{{ account.get('sub_category') }}</td>
-                    <td>{{ account.get('account_balance') }}</td>
+                    <td>{{ service.get('name') }}</td>
+                    <td>{{ service.get('description') }}</td>
+                    
                 </tr>
                 {% endfor %}
             </tbody>
