--- a/backend/journals/utils/templates/users.html
+++ b/backend/journals/utils/templates/users.html
@@ -65,22 +65,20 @@
             <thead>
                 <tr>
                     <th>No #</th>
-                    <th>Account Name</th>
-                    <th>Group</th>
-                    <th>Category</th>
-                    <th>Sub Category</th>
-                    <th>Balance ({{ organisation.currency }})</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Phone Number</th>
+                    <th>Amount Due ({{ organisation.currency }})</th>
                 </tr>
             </thead>
             <tbody>
-                {% for account in data %}
+                {% for user in data %}
                 <tr>
                     <td>{{ loop.index }}</td>
-                    <td>{{ account.get('name') }}</td>
-                    <td>{{ account.get('group') }}</td>
-                    <td>{{ account.get('category') }}</td>
-                    <td>{{ account.get('sub_category') }}</td>
-                    <td>{{ account.get('account_balance') }}</td>
+                    <td>{{ user.get('name') }}</td>
+                    <td>{{ user.get('email') }}</td>
+                    <td>{{ user.get('phone_number') }}</td>
+                    <td style="text-align: right;">{{ user.get('amount_due') }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
