Frontend and Backend - Getting, Updating, Downloading and Deleting a single account, stock, customer and supplier

--- a/backend/journals/utils/templates/accounts.html
+++ b/backend/journals/utils/templates/accounts.html
@@ -80,7 +80,7 @@
                     <td>{{ account.get('group') }}</td>
                     <td>{{ account.get('category') }}</td>
                     <td>{{ account.get('sub_category') }}</td>
-                    <td>{{ account.get('account_balance') }}</td>
+                    <td style="text-align: right;">{{ account.get('account_balance') }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
