--- a/backend/journals/utils/templates/single_stock_summary.html
+++ b/backend/journals/utils/templates/single_stock_summary.html
@@ -87,17 +87,17 @@
                 
                 <tr>
                     <td>{{ loop.index }}</td>
-                    <td>{{ entry.get('date') }}</td>
-                    <td>{{ entry.get('type') }}</td>
+                    <td>{{ entry.get('details').get('date') }}</td>
+                    <td>{{ entry.get('details').get('type') }}</td>
                     <td style="text-align: right;">
-                        {% if entry.get('type') in ('Sales', 'Purchase Return') %}
+                        {% if entry.get('details').get('type') in ('Sales', 'Purchase Return') %}
                         <span>(-)</span>
                         {% endif %}
-                        {{ entry.get('quantity') }}
+                        {{ entry.get('details').get('quantity') }}
                     </td>
-                    <td style="text-align: right;">{{ entry.get('rate') }}</td>
-                    <td style="text-align: right;">{{ entry.get('total') }}</td>
-                    <td colspan="2">{{ entry.get('description')}} </td>
+                    <td style="text-align: right;">{{ entry.get('details').get('rate') }}</td>
+                    <td style="text-align: right;">{{ entry.get('details').get('total') }}</td>
+                    <td colspan="2">{{ entry.get('details').get('description')}} </td>
                 </tr>
                 {% endfor %}
             </tbody>
