--- a/backend/journals/utils/templates/returns.html
+++ b/backend/journals/utils/templates/returns.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,23 +8,24 @@
 
     <title>{{ title }}</title>
 </head>
+
 <body>
 
     <header>
         <table>
-        <tbody>
-            <tr>
-                <td>
-                    <h1>{{ organisation.org_name }}</h1>
-                    <h2>{{ report_title }}</h2>
-                </td>
-                <td style="text-align: right;"><img src="{{ logo_path }}" alt="Logo"></td>
-            </tr>
-            <tr>
-                <td></td>
-                <td style="text-align: right;"><i><strong>{{ author_full }}</strong></i></td>
-            </tr>
-        </tbody>
+            <tbody>
+                <tr>
+                    <td>
+                        <h1>{{ organisation.org_name }}</h1>
+                        <h2>{{ report_title }}</h2>
+                    </td>
+                    <td style="text-align: right;"><img src="{{ logo_path }}" alt="Logo"></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td style="text-align: right;"><i><strong>{{ author_full }}</strong></i></td>
+                </tr>
+            </tbody>
         </table>
     </header>
 
@@ -62,43 +64,59 @@
                 </tr>
             </thead>
             <tbody>
-                {% for return in data %}
+                {% set returns = data.get('purchase_returns') or data.get('sales_returns') %}
+                {% if returns %}
+                {% for return in returns %}
+
                 {% set col = loop.index %}
 
-                    {% for entry in return.get('return_entries') %}
-                        {% if loop.index == 1 %}
-                            {% set first_entry = true %}
-                        {% else %}
-                            {% set first_entry = false %}
-                        {% endif %}
-                        <tr>
-                            {% if first_entry %}
-                                <td>{{ col }}</td>
-                                <td>{{ return.get('date') }}</td>
-                            {% else %}
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                                <td>&nbsp;</td>
-                            {% endif %}
-                            <td colspan="2">{{ entry.get('stock_name') }}</td>
-                            <td style="text-align: right;">{{ entry.get('return_price') }}</td>
-                            <td style="text-align: right;">{{ entry.get('quantity') }}</td>
-                            <td style="text-align: right;">
-                                {% set total = entry.return_price | float * entry.return_quantity | float %}
-                                {{ total }}
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    <tr style="border-bottom: 3px;">
-                        <td>&nbsp;</td>
-                        <td>&nbsp;</td>
-                        <td colspan="2"><i>({{ return.get('description') }})</i></td>
-                        <td style="text-align: right; text-decoration: underline;">Total</td>
-                        <td style="text-align: right; text-decoration: underline;">{{ return.get('items_data').get('total_quantity') }}</td>
-                        <td style="text-align: right; text-decoration: underline;">{{ return.get('items_data').get('total_amount') }}</td>
-                    </tr>
+                {% for entry in return.get('return_entries') %}
+                {% if loop.index == 1 %}
+                {% set first_entry = true %}
+                {% else %}
+                {% set first_entry = false %}
+                {% endif %}
+                <tr>
+                    {% if first_entry %}
+                    <td>{{ col }}</td>
+                    <td>{{ return.get('date') }}</td>
+                    {% else %}
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    {% endif %}
+                    <td colspan="2">{{ entry.get('stock_name') }}</td>
+                    <td style="text-align: right;">{{ entry.get('return_price') }}</td>
+                    <td style="text-align: right;">{{ entry.get('quantity') }}</td>
+                    <td style="text-align: right;">
+                        {% set total = entry.return_price | float * entry.return_quantity | float %}
+                        {{ total }}
+                    </td>
+                </tr>
                 {% endfor %}
+                <tr style="border-bottom: 3px;">
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                    <td colspan="2"><i>({{ return.get('description') }})</i></td>
+                    <td style="text-align: right; text-decoration: underline;">Total</td>
+                    <td style="text-align: right; text-decoration: underline;">{{
+                        return.get('details').get('total_quantity') }}</td>
+                    <td style="text-align: right; text-decoration: underline;">{{
+                        return.get('details').get('total_amount') }}</td>
+                </tr>
+                {% endfor %}
+                {% else %}
+                <tr>
+                    <td colspan="7">No returns available</td>
+                </tr>
+                {% endif %}
+                <tr style="font-weight: bold; text-decoration: underline;">
+                    <td colspan="5" style="text-align: right;">Total</td>
+                    <td style="text-align: right;">{{ data.get('totals').get('quantity') }}</td>
+                    <td style="text-align: right;">{{ data.get('totals').get('amount') }}</td>
+
+                </tr>
             </tbody>
         </table>
     </section>
@@ -108,4 +126,5 @@
     </footer>
 
 </body>
+
 </html>
