Frontend - Sales, Purchases and Accounts page modified to be responsive and user friendly

--- a/backend/journals/utils/templates/returns.html
+++ b/backend/journals/utils/templates/returns.html
@@ -66,57 +66,48 @@
             <tbody>
                 {% set returns = data.get('purchase_returns') or data.get('sales_returns') %}
                 {% if returns %}
-                {% for return in returns %}
-
-                {% set col = loop.index %}
-
-                {% for entry in return.get('return_entries') %}
-                {% if loop.index == 1 %}
-                {% set first_entry = true %}
+                    {% for return in returns %}
+                        {% set row_span = return.get('return_entries') | length + 1 %}
+                        {% for entry in return.get('return_entries') %}
+                            <tr>
+                                {% if loop.index == 1 %}
+                                    <td rowspan="{{ row_span }}">{{ loop.index }}</td>
+                                    <td rowspan="{{ row_span }}">{{ return.get('date') }}</td>
+                                {% endif %}
+                                <td colspan="2">{{ entry.get('stock_name') }}</td>
+                                <td style="text-align: right;">{{ entry.get('return_price') }}</td>
+                                <td style="text-align: right;">{{ entry.get('quantity') }}</td>
+                                <td style="text-align: right;">
+                                    {% set total = entry.return_price | float * entry.return_quantity | float %}
+                                    {{ total }}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        <tr>
+                            <td colspan="3" style="text-align: right; display: flex; gap: 8px;">
+                                <i>({{ return.get('description') }})</i>
+                                <span style="text-decoration: underline;">Total</span>
+                                <span>&nbsp;</span>
+                            </td>
+                            <td style="text-align: right; text-decoration: underline;">
+                                {{ return.get('details').get('total_quantity') }}
+                            </td>
+                            <td style="text-align: right; text-decoration: underline;">
+                                {{ return.get('details').get('total_amount') }}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    <tr style="font-weight: bold; background-color: #d1d5db;">
+                        <td colspan="5" style="text-align: right;">Total</td>
+                        <td style="text-align: right;">{{ data.get('totals').get('quantity') }}</td>
+                        <td style="text-align: right;">{{ data.get('totals').get('amount') }}</td>
+                    </tr>
                 {% else %}
-                {% set first_entry = false %}
+                    <tr>
+                        <td colspan="7">No returns available</td>
+                    </tr>
                 {% endif %}
-                <tr>
-                    {% if first_entry %}
-                    <td>{{ col }}</td>
-                    <td>{{ return.get('date') }}</td>
-                    {% else %}
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    {% endif %}
-                    <td colspan="2">{{ entry.get('stock_name') }}</td>
-                    <td style="text-align: right;">{{ entry.get('return_price') }}</td>
-                    <td style="text-align: right;">{{ entry.get('quantity') }}</td>
-                    <td style="text-align: right;">
-                        {% set total = entry.return_price | float * entry.return_quantity | float %}
-                        {{ total }}
-                    </td>
-                </tr>
-                {% endfor %}
-                <tr style="border-bottom: 3px;">
-                    <td>&nbsp;</td>
-                    <td>&nbsp;</td>
-                    <td colspan="2"><i>({{ return.get('description') }})</i></td>
-                    <td style="text-align: right; text-decoration: underline;">Total</td>
-                    <td style="text-align: right; text-decoration: underline;">{{
-                        return.get('details').get('total_quantity') }}</td>
-                    <td style="text-align: right; text-decoration: underline;">{{
-                        return.get('details').get('total_amount') }}</td>
-                </tr>
-                {% endfor %}
-                {% else %}
-                <tr>
-                    <td colspan="7">No returns available</td>
-                </tr>
-                {% endif %}
-                <tr style="font-weight: bold; text-decoration: underline;">
-                    <td colspan="5" style="text-align: right;">Total</td>
-                    <td style="text-align: right;">{{ data.get('totals').get('quantity') }}</td>
-                    <td style="text-align: right;">{{ data.get('totals').get('amount') }}</td>
-
-                </tr>
+                
             </tbody>
         </table>
     </section>
